Fix off center social icons

--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -7,6 +7,7 @@ body > footer {
     display: inline-table;
     font-size: 21px;
     list-style: none;
+    padding-left: 0;
 
     li {
         float: left;
